UX: ensures state panel is not totally off centered

--- a/assets/stylesheets/common/discourse-reactions.scss
+++ b/assets/stylesheets/common/discourse-reactions.scss
@@ -150,7 +150,7 @@ html.discourse-reactions-no-select {
 }
 
 .discourse-reactions-state-panel {
-  min-width: 235px;
+  min-width: 80px;
   max-width: 275px;
   visibility: hidden;
   display: none;
